AUX_SOURCE_DIRECTORY(src/ CMETLIB_FILES)
ADD_LIBRARY(cmet SHARED ${CMETLIB_FILES} include/cmet/macros.h)
SET_TARGET_PROPERTIES(
        cmet
    PROPERTIES
        SOVERSION ${${PROJECT_NAME}_SOVERSION}
        VERSION ${${PROJECT_NAME}_VERSION})
INSTALL(TARGETS cmet LIBRARY DESTINATION lib)
INSTALL(FILES include/cmet/cmet.h DESTINATION include)


SET(CMET_NEEDED_LIBS cmet ${LOG4CPLUS_LIBRARIES})

ADD_EXECUTABLE(cmet_test app/cmet_test.cpp)
TARGET_LINK_LIBRARIES(cmet_test ${CMET_NEEDED_LIBS})
