AUX_SOURCE_DIRECTORY(src/ HELLOLIB_FILES)
ADD_LIBRARY(hellolib SHARED ${HELLOLIB_FILES})
SET_TARGET_PROPERTIES(
        hellolib
    PROPERTIES
        SOVERSION ${${PROJECT_NAME}_SOVERSION}
        VERSION ${${PROJECT_NAME}_VERSION})
INSTALL(TARGETS hellolib LIBRARY DESTINATION)

SET(HELLO_NEEDED_LIBS hellolib)

ADD_EXECUTABLE(hello app/hello.cpp)
TARGET_LINK_LIBRARIES(hello ${HELLO_NEEDED_LIBS})
# INSTALL(TARGETS hello DESTINATION bin)
